# IA_course

2ndPractice/himmelblau_optimization/: himmelblau_simulated_annealing  himmelblau_simulated_annealing.cpp
2ndPractice/mazeSearch/: cell.hpp  gen_algorithms.cpp  main.cpp  search_algorithms.cpp  utils.cpp
Pract02/himmelblau_optimization/: himmelblau_simulated_annealing  himmelblau_simulated_annealing.cpp
Pract02/mazeSearch/: CONSTANTS.HPP  Makefile  cell.cpp  cell.hpp  gen_algorithms.cpp  gen_algorithms.hpp  grid.cpp  main.cpp  mazes  search_algorithms.cpp  search_algorithms.hpp  utils.cpp  utils.hpp
Pract03/ttt_cpp/: CONSTANTS.HPP  Makefile  alpha_beta_minmax.cpp  alpha_beta_minmax.hpp  alpha_beta_pruning.hpp  board.cpp  board.hpp  cell.cpp  cell.hpp  main.cpp  tic_tac_toe
Pract03/ttt_py/: main.py  tic_tac_toe.py
Pract03/ttt_py/venv_ttt_py/: pyvenv.cfg
Pract04/Particle_Dataset/: Particle_dataset_EDA.ipynb
Pract04/Particle_Dataset/.ipynb_checkpoints/: Particle_dataset_EDA-checkpoint.ipynb
Pract04/Predictive_Maintenance_Dataset/: predictive_maintenance_dataset.ipynb
Pract04/Predictive_Maintenance_Dataset/.ipynb_checkpoints/: predictive_maintenance_dataset-checkpoint.ipynb
Pract05/minimum_distance_classifier/: .gitignore  CMakeLists.txt  setup.py
Pract05/minimum_distance_classifier/include/: classifier.hpp  cuda_kernels.cuh
Pract05/minimum_distance_classifier/python/: __init__.py  classifier.py
Pract05/minimum_distance_classifier/src/: classifier.cpp  cuda_kernels.cu  python_bindings.cpp
Pract05/minimum_distance_classifier/test/: test_classifier.cpp
Pract05/minimum_distance_classifier/tests/: test_classifier.cpp
Pract06/: basic_classifiers_particleDS.ipynb
misc/red-black_tree/: .clang-format  node.cpp  node.hpp  red-black_tree.cpp  red-black_tree.hpp  red-black_tree.txt  test  test.cpp
pract02/: CONSTANTS.HPP  Makefile  algorithms.cpp  algorithms.hpp  cell.cpp  cell.hpp  gen_algorithms.cpp  gen_algorithms.hpp  grid.cpp  grid.hpp  main.cpp  mazes  search_algorithms.cpp  search_algorithms.hpp  utils.cpp  utils.hpp
